--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,9 +19,8 @@ button {
   }
 }
 
-.App-header {
+section {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
