--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,7 +20,7 @@ button {
 }
 
 section {
-  background-color: #282c34;
+  background-color: pink;
   display: flex;
   flex-direction: column;
   align-items: center;
